First Bulk Fixed
Did not notice prebuilt functions.
pretty straight forward.

--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
-/* Your code here */
+/* Your code here  */
+#songs {
+    display: flex;
+}
+
+li > div {
+    width: 300px;
+    border: 15px solid green;
+    padding: 50px;
+    margin: 20px;
+}
