--- a/style.css
+++ b/style.css
@@ -1,1 +1,90 @@
 /* Your code here */
+*{
+    box-sizing: border-box;
+}
+.bar {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 9rem;
+    width: 100vw;
+    background-color:#100B20;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content:space-between ;
+    align-items: center;
+
+}
+
+.bar-left {
+    flex-basis: 20%;
+    background-color: red;
+    height: 100%;
+    order: 0;
+}
+
+.bar-title {
+    width: 100%;
+    height: 33%;
+    background-color: blue;
+}
+
+.bar-artist {
+    width: 100%;
+    height: 33%;
+    background-color: aqua;
+}
+
+.bar-album {
+    width: 100%;
+    height: 33%;
+    background-color: green;
+}
+
+.song-details {
+    font-size: 1.5rem;
+    display: inline;
+    margin-left: 3rem;
+    color: white;
+    margin-top: 1rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.bar-middle {
+order: 1;
+flex-basis: 40%;
+height: 100%;
+
+}
+
+.bar-right {
+    order: 2;
+    flex-basis: 20%;
+    height: 100%;
+    background-color: tomato;
+}
+
+.bar-buttons {
+    display: inline-flex;
+    background-color: wheat;
+    width: 100%;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+.control-button {
+    height: 2rem;
+    width: 2rem;
+}
+
+
+.bar-timebar {
+    display: inline-block;
+    background-color: yellow;
+    height: 5rem;
+    width: 100%;
+}
+
+
