--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     height: 100%;
     background: #4b4276;
 }
+td { white-space:pre-wrap; word-wrap:break-word }
 
 nav ul li{
     padding:15px;
@@ -79,3 +80,4 @@ p{
 .playlist h1{
     font-size: 20px;
 }
+
