--- a/style.css
+++ b/style.css
@@ -40,9 +40,20 @@ button {
 
 .bar-left {
     flex-basis: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: stretch;
     background-color: red;
     height: 100%;
     order: 0;
+}
+
+.bar-song-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .bar-title {
@@ -64,7 +75,7 @@ button {
 }
 
 .song-details {
-    font-size: 1.5rem;
+    font-size: 2vw;
     display: inline;
     margin-left: 3rem;
     color: white;
@@ -147,7 +158,7 @@ button {
 .sidebar-item {
     flex-basis: 7rem;
     font-family: "Rubik";
-    font-size: 2.5rem;
+    font-size: 4vw;
     margin-left: 2rem;
     color: white;
 }
