add section my-songs

--- a/style.css
+++ b/style.css
@@ -173,3 +173,22 @@ button {
 .sidebar-pic {
     width: 100%;
 }
+
+/* START MY SONGS SECTION */
+.my-songs {
+    background-color: darkslategray;
+    height: 100vh;
+    width: 77%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.page-title {
+    font-size: 5vw;
+    margin-left: 2.8vw;
+}
