--- a/style.css
+++ b/style.css
@@ -191,4 +191,23 @@ button {
 .page-title {
     font-size: 5vw;
     margin-left: 2.8vw;
+    font-family: "Rubik";
+    font-weight: 100;
+
+    color: white;
+}
+
+.songs {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: stretch;
+}
+
+.song-data-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 4rem;
 }
