I tried to change the file again, still not finished

--- a/style.css
+++ b/style.css
@@ -1,1 +1,40 @@
 /* Your code here */
+/*
+.container{
+
+}
+
+.paragraph{
+
+}
+
+.sub-header{
+
+}
+
+.sub-headline{
+
+}
+
+.list{
+
+}
+
+#main-container{
+
+}
+
+#main-header{
+
+}
+
+#main-headline{
+
+}
+
+#intro{
+
+}
+*/
+
+
