--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ button {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    padding: 3rem;
 }
 
 .page-title {
@@ -197,11 +198,12 @@ button {
     color: white;
 }
 
-.songs {
+#songs {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: stretch;
+    width: 100%;
 }
 
 .song-data-container {
@@ -209,5 +211,38 @@ button {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 4rem;
+    height: 6rem;
+    padding: 1rem 0;
+    font-family: "Rubik";
+    color: white;
+}
+
+.album-img-container {
+    height: 100%;
+    flex-basis: 15%;
+}
+
+.album-img {
+    height: 100%;
+}
+
+.song-title {
+    flex-basis: 25%;
+}
+
+.song-album {
+    flex-basis: 25%;
+}
+
+.song-artist {
+    flex-basis: 25%;
+}
+
+.song-duration {
+    text-align: end;
+    flex-basis: 10%;
+}
+
+.data-cell {
+    padding: 0 0.9rem;
 }
