--- a/style.css
+++ b/style.css
@@ -155,6 +155,12 @@ button {
     align-items: flex-start;
 }
 
+.sidebar-pic {
+    background-color: tomato;
+    width: 300px;
+    height: 300px;
+}
+
 .sidebar-item {
     flex-basis: 7rem;
     font-family: "Rubik";
