--- a/style.css
+++ b/style.css
@@ -10,6 +10,6 @@ body{
 }
 .playlist{
     background-color: crimson;
-    border: 5px, solid,  blue;
-    display: block;
+    border: 5px, solid;
+    display: inline-block;
 }
