--- a/style.css
+++ b/style.css
@@ -22,6 +22,5 @@ ul {
     background-color: lawngreen;
     margin: auto;
 }
- .id {
-  visibility: hidden;
-}
+ /* .id {
+  visibility: hidden; */
