bulding basic style

--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 /* Your code here */
-li{
+span{
     cursor: pointer;
-list-style: none;
 border:solid thin black;
 /* text-align: center; */
-margin-right: 50%;
-border-left: 30%;
+/* margin-right: 50%;
+border-left: 30%; */
 /* pointer-events: visible; */
 }
 img{
     height:70px;
-    border:solid thin black;
+    padding-left:  30px;
+}
+.song{
+    background-color: lightgray;
+    border-radius:10px;
+    padding-bottom: 20px;
+    margin-right: 40%;
 }
