--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
 /* Your code here */
+.album-art{
+    width:100px;
+    height:100px;
+
+}
+
+.song-wrapper{
+    box-shadow: 0px 0px 4px 2px;
+    height:120px;
+    margin-bottom:20px;
+    cursor: pointer;
+}
+#currently-playing{
+    margin:20px;
+}
+
+.data-wrapper{
+    margin-left:110px;
+}
