--- a/style.css
+++ b/style.css
@@ -1,38 +1,19 @@
 /* ------Main------ */
-#main-container{
-    background-color: #39F2CC;
-    color: rgb(0, 0, 0);
-    font-size: 1em;
-    text-align: center;
+#container{
+    background: #77EDEF;
+    box-shadow: 2px 0 4px rgba(0,0,0,0.5);
+    border-radius: 2px;
     border: 1px black;
     border-style: solid;
-    margin: 0%;
-    padding: 0%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    justify-content: stretch;
+}
 }
 
-#main-header{
+#header{
     font-family: 'Orbitron', sans-serif;
-}
-
-#main-headline{
-
-}
-
-.paragraph{
-
-}
-
-
-
-
-
-
-
-#intro{
-
-}
-
-.sub-header{
     background: #77EDEF;
     color: slategray(0, 0, 0);
     font-size: 1em;
@@ -45,23 +26,13 @@
     justify-content: stretch;
 }
 
-.container{
-    background: #77EDEF;
-    box-shadow: 2px 0 4px rgba(0,0,0,0.5);
-    border-radius: 2px;
-    border: 1px black;
-    border-style: solid;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    justify-content: stretch;
+#headline{
+
 }
 
+.paragraph{
 
-.sub-headline{
-    
 }
-
 
 .list{
   list-style-type: none;
