I added the playlist element for each playlist in player by the requirements

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     justify-content: center;
     justify-content: stretch;
 }
-}
+
 
 #header{
     font-family: 'Orbitron', sans-serif;
@@ -26,13 +26,13 @@
     justify-content: stretch;
 }
 
-#headline{
+/* #headline{
 
 }
 
 .paragraph{
 
-}
+} */
 
 .list{
   list-style-type: none;
