--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   list-style-type: none;
 }
 
-.song-class{
+.song-class, .playlist-class{
   margin-right: 4%;;
   padding: 0%;
   border:20px white;
