--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html, body {
 }
 
 body {
-   background: grey no-repeat center;;
+   background: grey no-repeat center;
 }
 h1 { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 110px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; }
 
