added playsong and removesong function
-made a common handler for both removesong and playsong with the distinction of each button doing something else

--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
+    /* 
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap-reverse;
+    display:flex;justify-content:center;align-items:center; */
     font-family: system-ui;
     font-weight: bold;
     background: linear-gradient(to right, red, yellow, green);
     color: rgb(209, 196, 196);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap-reverse;
-    display:flex;justify-content:center;align-items:center;
 }
 
 #list {
@@ -48,5 +49,11 @@ div{
      margin-left:auto;
      margin-right:auto;
      background-color: blue;
+}
+h1{
+    text-align: center;
+}
+h2{
+    text-align: center;
 }
 
